docs/v1/logs/2026-01-02/native_compilation_error_2026_01_02.txt
Error Log: Zig NIF Compilation Failure via Zigler 0.15.2
Date: 2026-01-02
Issue: "Macro Wall" - ERL_NIF_API_FUNC_DECL macro parsing failure in cimport.zig

Command: mix compile
Status: Failed

Error Output:
== Compilation error in file lib/aether/native/scanner.ex ==
** (CompileError) install
+- install Elixir.Aether.Native.Scanner
   +- compile lib Elixir.Aether.Native.Scanner Debug native 1 errors
.zig-cache\o\47958b71c1ec8e21f268b577c319dcbd\cimport.zig:3244:80: error: no field named 'NAME' in struct 'cimport.TWinDynNifCallbacks'
pub inline fn ERL_NIF_API_FUNC_MACRO(NAME: anytype) @TypeOf(WinDynNifCallbacks.NAME) {
                                                                               ^~~~
.zig-cache\o\47958b71c1ec8e21f268b577c319dcbd\cimport.zig:1703:40: note: struct declared here
pub const TWinDynNifCallbacks = extern struct {
                                ~~~~~~~^~~~~~
referenced by:
    enif_alloc: .zig-cache\o\47958b71c1ec8e21f268b577c319dcbd\cimport.zig:3249:24
    enif_alloc: C:\Users\Administrator\Documents\GitHub\Aether\_build\dev\lib\zigler\priv\beam\erl_nif.zig:145:25

Analysis:
The error occurs in `.zig-cache...cimport.zig`. This file is generated by Zigler/Zig's @cImport mechanism when processing `erl_nif.h`.
Even though `scanner.ex` defined a manual `TWinDynNifCallbacks` shim, Zigler's internal `erl_nif.zig` (which is a dependency of every Zigler NIF) still imports the "broken" header via `@cImport`.
Expected `TWinDynNifCallbacks.NAME` (macro expansion result), but because the macro failed to parse correctly in Zig 0.15, the struct definition generated by `@cImport` is missing the fields or is malformed.

Conclusion:
The Surgical Fix (manual shim in NIF) failed because the dependency chain `zigler -> erl_nif.zig -> @cImport("erl_nif.h")` breaks before the NIF code is even reached.
To fix this, we would need to patch `zigler` itself to stop using `@cImport` for `erl_nif.h` on Windows/OTP27+.
